Set margin to auto for h1 element
More specific values may need to be specified in the future for
aesthetic reasons.

--- a/projects/foundations_course/css_foundations/odin-recipes-css/style/style.css
+++ b/projects/foundations_course/css_foundations/odin-recipes-css/style/style.css
@@ -2,6 +2,10 @@
     font-family: Verdana, Arial, sans-serif;
 }
 
+h1 {
+    margin: auto;
+}
+
 .top-heading {
     font-size: 48px;
     text-align: center;
