Set margin and box type to block for img element

--- a/projects/foundations_course/css_foundations/odin-recipes-css/style/style.css
+++ b/projects/foundations_course/css_foundations/odin-recipes-css/style/style.css
@@ -2,6 +2,11 @@
     font-family: Verdana, Arial, sans-serif;
 }
 
+img {
+    margin: 40px auto;
+    display: block;
+}
+
 h1 {
     margin: auto;
 }
